k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solia-mongo
  labels:
    app: solia-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solia-mongo
  template:
    metadata:
      labels:
        app: solia-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
