k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solia-client-service
spec:
  selector:
    app: solia-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: ClusterIP
