k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solia-client-deployment
  labels:
    app: solia-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solia-client
  template:
    metadata:
      labels:
        app: solia-client
    spec:
      containers:
        - name: client
          image: moros/solia-client:latest
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: solia-client-service
spec:
  selector:
    app: solia-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: ClusterIP
